--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -114,7 +114,7 @@ $\rvx$ is the transmitted signal, $\rvy$ is the received signal, $\rvu$ and $\rv
 and the ``transfer function" $\opH$ is the communications channel (air, water, wires, etc.) that one wishes to estimate.
 
   \item The illustration on the right is suitable for modeling a testing system where
-$\rvp$ is an input test signal (from an industrial shaker or from a naturally occurring signal originating 
+$\rvp$ is an input test signal (from an industrial shaker or from a naturally occurring signal originating
 from geophysical activity), $\rvw$ is measurement noise, $\rvx$ is the measured input contaminated by noise,
 and $\opH$ is the device under test (a piece of equipment, a building, or the entire earth).
 \end{liste}
@@ -133,7 +133,7 @@ But there are some key differences in practice:
   \item In the communications model (on the left), the ``input signal" is $\rvx(n)$
       and the frequency-domain input \fncte{signal-to-noise ratio} (\fncte{SNR}) is $\ffrac{\Swxx(\omega)}{\Swuu(\omega)}$.
       In the measurement model (on the right), the ``input signal" is $\rvp(n)$
-      and the frequency-domain input \fncte{signal-to-noise ratio} (\fncte{SNR}) is 
+      and the frequency-domain input \fncte{signal-to-noise ratio} (\fncte{SNR}) is
          $\ffrac{\Swpp(\omega)}{\Swww(\omega)} = \ffrac{\Swpp(\omega)}{\Swuu(\omega)}$.
 
   \item On the left, $\rvx$ and $\rvu$ would be typically \prope{uncorrelated};
@@ -147,7 +147,7 @@ As a first attempt at estimating the transfer function $\opH$ of $\opS$,
 or at least the magnitude squared of $\opH$,
 we might assume $\opH$ to be \prope{LTI}, take a cue from the relation
 $\Swyy=\Swxx\abs{\FH}^2$ of \prefpp{cor:Swxy},
-%somehow deem the squaring operation to be of little consequence, 
+%somehow deem the squaring operation to be of little consequence,
 and arrive at a function called ``\fncte{transmissibility}"
 (next definition).
 %---------------------------------------
@@ -171,14 +171,14 @@ Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
   }
 \end{definition}
 
-Transmissibility is in essence the ratio of ``\fncte{spectral power}" \xref{rem:spower} 
+Transmissibility is in essence the ratio of ``\fncte{spectral power}" \xref{rem:spower}
 output to \fncte{spectral power} input.
 Note that it is a real-valued function (because $\Swxx$ and $\Swyy$ are real-valued).
-We might suspect that we could attain better estimates of $\opH$ by allowing the estimates to be complex-valued. %\ldots 
+We might suspect that we could attain better estimates of $\opH$ by allowing the estimates to be complex-valued. %\ldots
 %not to mention the idea of taking seriously the squaring operation.
 And in fact, all the remaining estimates in this section are in general complex-valued.
 
-And so to start (again), and in the very special (a.k.a unrealistic) case of $\opS$ having 
+And so to start (again), and in the very special (a.k.a unrealistic) case of $\opS$ having
 \prope{zero measurement noise} (\prope{zero measurement error})
 ($\rvv=\rvu=\rvw=0$),
 $\fh(n)$ being \prope{linear time invariant} (\prope{LTI}),
@@ -188,7 +188,7 @@ exactly by $\FH(\omega)=\ffrac{\Swyx(\omega)}{\Swxx(\omega)}$ \xref{cor:Swxy}.
 
 However, in practical situations, there is measurement noise/error. % \xref{fig:xhyplusv}.
 Examples may include
-``road noise" from a test being performed in a moving vehicle or \fncte{quantization noise} from an 
+``road noise" from a test being performed in a moving vehicle or \fncte{quantization noise} from an
 \hie{analog-to-digital converter} (\hie{ADC}).
 
 \begin{minipage}{\tw-70mm}
@@ -220,7 +220,7 @@ then $\estHa$ (next definition) is the ideal estimator in the sense that $\estHa
 %---------------------------------------
 Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 \defbox{\begin{array}{Mrc>{\ds}l}
-  The \fnctd{transfer function estimate $\estHa(\omega)$} is defined as & 
+  The \fnctd{transfer function estimate $\estHa(\omega)$} is defined as &
   \estHa(\omega) &\eqd& \frac{\Swyx(\omega)}{\Swxx(\omega)}
 \end{array}}
 \end{definition}
@@ -259,7 +259,7 @@ Note also that in the case of both no input and no output noise, then $\estHa=\e
 %---------------------------------------
 Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 \defbox{\begin{array}{Mrc>{\ds}l}
-  The \fnctd{transfer function estimate $\estHb(\omega)$} is defined as 
+  The \fnctd{transfer function estimate $\estHb(\omega)$} is defined as
   & \estHb(\omega) &\eqd& \frac{\Swyy(\omega)}{\Swxy(\omega)}
 \end{array}}
 \end{definition}
@@ -296,7 +296,7 @@ this approach summarizes \pref{def:Hv} -- \prefpp{def:Hkappa}.
 %---------------------------------------
 Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 \defbox{\begin{array}{Mrc>{\ds}>{\ds}l}
-  The \fnctd{transfer function estimate $\estHam(\omega)$} is defined as 
+  The \fnctd{transfer function estimate $\estHam(\omega)$} is defined as
   & \estHam(\omega) &\eqd& \frac{\estHa(\omega) + \estHb(\omega)}{2}
 \end{array}}
 \end{definition}
@@ -310,7 +310,7 @@ Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 %---------------------------------------
 Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 \defbox{\begin{array}{Mrc>{\ds}>{\ds}l}
-  The \fnctd{transfer function estimate $\estHgm(\omega)$} is defined as 
+  The \fnctd{transfer function estimate $\estHgm(\omega)$} is defined as
   & \estHgm(\omega) &\eqd& \sqrt{\estHa(\omega)\estHb(\omega)}
 \end{array}}
 \end{definition}
@@ -327,7 +327,7 @@ are closely related:
 \end{remark}
 \begin{proof}
 \begin{align*}
-  \estHgm(\omega) 
+  \estHgm(\omega)
     &\eqd \sqrt{\estHa(\omega)\estHb(\omega)}
     && \text{by definition of $\estHgm$}
     && \text{\xref{def:Hgm}}
@@ -349,12 +349,12 @@ are closely related:
 \begin{remark}
 \label{rem:HgmTxy_gen}
 %---------------------------------------
-\fncte{Transmissibility} $\Twxy$ is a kind of ``black sheep" of the system identification function family. 
+\fncte{Transmissibility} $\Twxy$ is a kind of ``black sheep" of the system identification function family.
 All the other members of this family ($\estHa$, $\estHb$, $\estHv$, $\estHs$) are \prope{complex-valued},
 but $\Twxy$ is only \prope{real-valued}---a seemingly ordinary Joe born into a super-hero family.
-But \pref{rem:HgmTxy_mag} suggests that $\Twxy$ is not simply a ``black sheep", but 
-rather a ``dark horse" with abilities that can easily be unleashed by slight redefinition. 
-In particular, \pref{rem:HgmTxy_mag} demonstrates that $\Twxy$ is the \hie{magnitude} of the geometric mean of 
+But \pref{rem:HgmTxy_mag} suggests that $\Twxy$ is not simply a ``black sheep", but
+rather a ``dark horse" with abilities that can easily be unleashed by slight redefinition.
+In particular, \pref{rem:HgmTxy_mag} demonstrates that $\Twxy$ is the \hie{magnitude} of the geometric mean of
 $\estHa$ and $\estHb$.
 We can thus justifiably define a \fnctd{complex transmissibility} function as $\estHgm$\ldots
 and the magnitude of this \fncte{complex transmissibility} function is the \fncte{ordinary transmissibility}
@@ -382,7 +382,7 @@ Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 \label{rem:HgmTxyCxy}
 %---------------------------------------
 Note that the \fncte{complex transmissibility} $\Twxy'$ of \pref{rem:HgmTxy_gen}
-provides a nice mathematical symmetry (always a good sign of good direction) with coherence 
+provides a nice mathematical symmetry (always a good sign of good direction) with coherence
 in the system identification family tree.
 In particular, note that the following:
 \remboxt{
@@ -421,7 +421,7 @@ In particular, note that the following:
 %---------------------------------------
 Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 \defbox{\begin{array}{Mrc>{\ds}>{\ds}l}
-  The \fnctd{transfer function estimate $\estHhm(\omega)$} is defined as 
+  The \fnctd{transfer function estimate $\estHhm(\omega)$} is defined as
   & \estHhm(\omega) &\eqd& \frac{1}{\frac{1}{\ds\estHa(\omega)} + \frac{1}{\ds\estHb(\omega)}}
 \end{array}}
 \end{definition}
@@ -456,7 +456,13 @@ It features a \vale{scaling parameter} $s$ in the range $\intco{0}{\infty}$
 that can be adjusted depending on the ratio of output and input noise.
 And as it turns out, $\estHs = \estHb$ when $s=0$, $\estHs=\estHv$ when $s=1$, and
 $\estHs\to\estHa$ as $s\to\infty$. % \xref{thm:Hs}.
-%---------------------------------------
+% ________________________________________________________________________________
+%| |                                   2 s^2 Syx(w)                               |
+%|D| Hs(w) = -------------------------------------------------------------------- |
+%|E|                                  __________________________________________  |
+%|F|           2                  \  /[ 2                ]2       2 |        |2   |
+%| |          s  Sxx(w) - Syy(w) + \/ [s  Sxx(w) - Syy(w)]   + 4 s  | Sxy(w) |    |
+%|_|______________________________________________________________________________|
 \begin{definition}[\fnctd{scaling estimate}]
 \footnote{
   \citerpgc{shin2008}{293}{0470725648}{(9.67)},
@@ -470,8 +476,8 @@ Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
   The \fnctd{transfer function estimate $\estHs(\omega)$} with \vald{scaling parameter} $s\in\intco{0}{\infty}$ is defined as
   \\\indentx$\ds
   \estHs(\omega; s) \eqd
-  \frac{2\Swyx(\omega)}
-       {\Swxx(\omega)-s^2\Swyy(\omega) + \sqrt{\brs{\Swxx(\omega)-s^2\Swyy(\omega)}^2 + 4s^2\abs{\Swxy(\omega)}^2}}
+  \frac{2s^2\Swyx(\omega)}
+       {s^2\Swxx(\omega)-\Swyy(\omega) + \sqrt{\brs{s^2\Swxx(\omega)-\Swyy(\omega)}^2 + 4s^2\abs{\Swxy(\omega)}^2}}
   $
   }
 \end{definition}
@@ -620,18 +626,18 @@ Let $\norm{\rvX}^2\eqd\pE\brs{\rvX\rvX^\ast}$.
     \begin{align*}
       0 &= \pderiv{}{\estH_R}\fCost\brp{\estH}
       \\&= \pderiv{}{\estH_R}\brp{
-               \Swpp\abs{\estH}^2 
-            %+ \Swuu\abs{\estH}^2 
-             - \estH\Swpy 
-             - \estH^\ast\Swpy^\ast 
+               \Swpp\abs{\estH}^2
+            %+ \Swuu\abs{\estH}^2
+             - \estH\Swpy
+             - \estH^\ast\Swpy^\ast
              + \Swqq
              }
         && \text{by \prefp{ilem:H1LS_cost}}
       \\&= \pderiv{}{\estH_R}\brp{
-               \Swpp\brs{\estH_R^2+\estH_I^2} 
-            %+ \Swuu\brs{\estH_R^2+\estH_I^2} 
-             - (\estH_R+i\estH_I)\Swpy 
-             - (\estH_R+i\estH_I)^\ast\Swpy^\ast 
+               \Swpp\brs{\estH_R^2+\estH_I^2}
+            %+ \Swuu\brs{\estH_R^2+\estH_I^2}
+             - (\estH_R+i\estH_I)\Swpy
+             - (\estH_R+i\estH_I)^\ast\Swpy^\ast
              + \Swqq
              }
       \\&= 2\estH_R\Swpp - \Swpy - \Swpy^\ast + \cancelto{0}{\pderiv{}{\estH_R}\Swqq}
@@ -670,10 +676,10 @@ Let $\norm{\rvX}^2\eqd\pE\brs{\rvX\rvX^\ast}$.
     \begin{align*}
       \estH(\omega)
         &= \estH_R(\omega) + i\estH_I(\omega)
-      \\&= \frac{ \Real\Swyp(\omega)}{\Swpp(\omega)} 
+      \\&= \frac{ \Real\Swyp(\omega)}{\Swpp(\omega)}
          + \frac{i\Imag\Swyp(\omega)}{\Swpp(\omega)}
         && \text{by \pref{ilem:H1LS_R} and \pref{ilem:H1LS_I}}
-      \\&= \frac{\Swyp(\omega)}{\Swpp(\omega)} 
+      \\&= \frac{\Swyp(\omega)}{\Swpp(\omega)}
     \end{align*}
 \end{enumerate}
 \end{proof}
@@ -681,7 +687,7 @@ Let $\norm{\rvX}^2\eqd\pE\brs{\rvX\rvX^\ast}$.
 It follows immediately from \prefpp{thm:estHls} that, in the special case
 of no input noise ($\rvu(n)=0$), $\estHa$ is the best
 least-squares estimate of $\FH$ (next corollary).
-Moreover, in the special case of $\FH$ being \prope{linear time invariant} (\prope{LTI}),
+Moreover, in the special case of $\opT=\FH$ being \prope{linear time invariant} (\prope{LTI}),
 then $\estHa$ is not only the best least-squares estimate, but $\estHa$ actually exactly equals $\FH$
 \xref{cor:estH1}.
 
@@ -734,7 +740,7 @@ Let $\opS$ be the \structe{system} illustrated in \prefp{fig:estHls} (B).
   \begin{array}{F>{\ds}rc>{\ds}l}
     (1).&\brb{\text{hypotheses of \prefp{thm:estHls}}}
         &\implies
-        &\estHls(\omega) = \frac{\Swyx(\omega) + \Swyu(\omega)}{\Swxx(\omega)-\Swww(\omega)}
+        &\estHls(\omega) = \frac{\Swyx(\omega)}{\Swxx(\omega)-\Swuu(\omega)}
     \\
     (2).&\brb{\text{hypotheses of \pref{thm:estHls} and $\vw(n)=0$}}
         &\implies
@@ -746,12 +752,12 @@ Let $\opS$ be the \structe{system} illustrated in \prefp{fig:estHls} (B).
     \text{(1):\quad}\estHls(\omega)
       &= \frac{\Swyp(\omega)}{\Swpp(\omega)}
       && \text{by \prefp{thm:estHls}}
-    \\&= \frac{\Swyp(\omega)}{\Swxx(\omega)-\Swww(\omega)}
-    \\&= \frac{\Swyx(\omega)-\Swyw(\omega)}{\Swxx(\omega)-\Swww(\omega)}
-    \\&= \frac{\Swyx(\omega)-\cancelto{0}{\Swyw(\omega)}}{\Swxx(\omega)-\Swww(\omega)}
+    \\&= \frac{\Swyp(\omega)}{\Swxx(\omega)-\Swuu(\omega)}
+    \\&= \frac{\Swyx(\omega)-\Swyu(\omega)}{\Swxx(\omega)-\Swuu(\omega)}
+    \\&= \frac{\Swyx(\omega)-\cancelto{0}{\Swyu(\omega)}}{\Swxx(\omega)-\Swuu(\omega)}
     \\
     \text{(2):\quad}\estHls(\omega)
-      &= \frac{\Swyx(\omega)}{\Swxx(\omega)-\Swww(\omega)}
+      &= \frac{\Swyx(\omega)}{\Swxx(\omega)-\Swuu(\omega)}
       && \text{by previous result}
       && \text{(1)}
     \\&= \frac{\Swyx(\omega)}{\Swxx(\omega)}
@@ -765,12 +771,17 @@ Let $\opS$ be the \structe{system} illustrated in \prefp{fig:estHls} (B).
 %=======================================
 \section{The $\estHs$ estimator}
 %=======================================
-%---------------------------------------
+% ___________________________________________________________________________________
+%| |                                   ____________________________________________  |
+%|P|                               \  /[                   ]2          |        |2   |
+%|R|          Syy(w) - k(w)Sxx(w) + \/ [Syy(w) - k(w)Sxx(w)]   + 4 k(w)| Sxy(w) |    |
+%|O| Hk(w) = --------------------------------------- ----------------- ------------- |
+%|P|                                       2 Sxy(w)                                  |
+%|_|_________________________________________________________________________________|
 \begin{proposition}
 \footnote{
-  \citerpgc{shin2008}{293}{0470725648}{(9.67)},
   \citePpc{white2006}{679}{(6)},
-  \citePc{leclere2012}{(10) $\kappa(f)=1/s^2$ and $x$ and $y$ swapped}
+  \citerpgc{shin2008}{293}{0470725648}{(9.67)}
   }
 \label{prop:Hkappa}
 %---------------------------------------
@@ -781,8 +792,13 @@ Let $\estHkp(\omega)$ be defined as in \prefpp{def:Hkappa}.
   }
 \end{proposition}
 
-
-%---------------------------------------
+% ________________________________________________________________________________
+%| |                                  __________________________________________  |
+%|P|                    2         \  /[          2       ]2       2 |        |2   |
+%|R|          Syy(w) - s  Sxx(w) + \/ [Syy(w) - s  Sxx(w)]   + 4 s  | Sxy(w) |    |
+%|O| Hs(w) = -------------------------------------------------------------------- |
+%|P|                                      2 Sxy(w)                                |
+%|_|______________________________________________________________________________|
 \begin{proposition}
 \footnote{
   \citerpgc{shin2008}{293}{0470725648}{(9.67) with $\kappa(\omega)=s^2$},
@@ -792,22 +808,71 @@ Let $\estHkp(\omega)$ be defined as in \prefpp{def:Hkappa}.
   }
 \label{prop:Hs}
 %---------------------------------------
-Let $\estHkp(\omega)$ be defined as in \prefpp{def:Hkappa}.
+Let $\estHs(\omega)$ be defined as in \prefpp{def:Hs}.
 \propbox{
-  \estHkp(\omega) = \frac{\Swyy(\omega)- s^2 \Swxx(\omega) + \sqrt{\brs{\Swyy(\omega) -  s^2 \Swxx(\omega)}^2 + 4 s^2 \abs{\Swxy(\omega)}^2}}
-                            {2\Swxy(\omega)}
+  \estHs(\omega)
+    = \frac{\Swyy(\omega)- s^2 \Swxx(\omega) +
+            \sqrt{\brs{\Swyy(\omega) -  s^2 \Swxx(\omega)}^2 + 4 s^2 \abs{\Swxy(\omega)}^2}
+           }{2\Swxy(\omega)}
   }
 \end{proposition}
 
 
+%---------------------------------------
+\begin{proposition}
+\label{prop:Hs_lim}
+%---------------------------------------
+Let $\estHs(\omega)$ be defined as in \prefpp{def:Hs}.
+\propbox{\begin{array}{F>{\ds}rc>{\ds}l}
+    (1). & \lim_{s\to0     }\estHs(\omega) &=& \estHb(\omega)
+  \\(2). & \lim_{s\to\infty}\estHs(\omega) &=& \estHa(\omega)
+\end{array}}
+\end{proposition}
+\begin{proof}
+\begin{align*}
+  \lim_{s\to\infty}\estHs(\omega; s)
+    &= \lim_{s\to\infty}
+       \frac{\Swyy(\omega)- s^2 \Swxx(\omega) +
+             \sqrt{\brs{\Swyy(\omega) -  s^2 \Swxx(\omega)}^2 + 4 s^2 \abs{\Swxy(\omega)}^2}
+            }{2\Swxy(\omega)}
+    && \text{by \prefp{prop:Hs}}
+  \\&= \frac{\Swyy(\omega)- 0 + \sqrt{\brs{\Swyy(\omega) -  0}^2 + 0}}
+            {2\Swxy(\omega)}
+  \\&= \frac{\Swyy(\omega)}
+            {\Swxy(\omega)}
+  \\&\eqd \estHb(\omega)
+    && \text{by definition of $\estHb$}
+    && \text{\xref{def:H2}}
+  \\
+  \lim_{s\to\infty}\estHs(\omega; s)
+    &\eqd \lim_{s\to\infty}
+          \frac{2s^2\Swyx(\omega)}
+               {s^2\Swxx(\omega)-\Swyy(\omega) + \sqrt{\brs{s^2\Swxx(\omega)-\Swyy(\omega)}^2 + 4s^2\abs{\Swxy(\omega)}^2}}
+    && \text{by definition of $\estHs$}
+    && \text{\xref{def:Hs}}
+  \\&= \lim_{s\to\infty}
+       \frac{2\Swyx(\omega)}
+            {\Swxx(\omega)-\frac{1}{s^2}\Swyy(\omega) + \sqrt{\frac{1}{s^4}\brs{s^2\Swxx(\omega)-\Swyy(\omega)}^2 + \frac{4}{s^4}s^2\abs{\Swxy(\omega)}^2}}
+  \\&= \lim_{s\to\infty}
+       \frac{2\Swyx(\omega)}
+            {\Swxx(\omega)-\frac{1}{s^2}\Swyy(\omega) + \sqrt{\brs{\frac{1}{s^2}s^2\Swxx(\omega)-\frac{1}{s^2}\Swyy(\omega)}^2 + \frac{4}{s^2}\abs{\Swxy(\omega)}^2}}
+  \\&= \frac{2\Swyx(\omega)}
+             {\Swxx(\omega)-0 + \sqrt{\brs{\Swxx(\omega)-0}^2 + 0}}
+  \\&= \frac{\Swyx(\omega)}
+            {\Swxx(\omega)}
+  \\&\eqd \estHa(\omega)
+    && \text{by definition of $\estHa(\omega)$}
+    && \text{\xref{def:H1}}
+\end{align*}
+\end{proof}
 
 
 %=======================================
 \section{Properties of LTI systems}
 %=======================================
-The previous section did assume the estimates $\estHa$ and $\estHb$  to be 
-\prope{linear time invariant} (\prope{LTI}), but it did \emph{not} assume that 
-the system transfer function $\opH$ itself to be \prope{LTI}. 
+The previous section did assume the estimates $\estHa$ and $\estHb$  to be
+\prope{linear time invariant} (\prope{LTI}), but it did \emph{not} assume that
+the system transfer function $\opH$ itself to be \prope{LTI}.
 But making the LTI assumption on $\opH$ yields some interesting and insightful
 results, such as those in this section.
 
@@ -821,7 +886,7 @@ Let $\opS$ be the \structe{system} illustrated in \prefp{fig:addnoise} (A).
   $\brb{\begin{array}{FMMD}
       (A).& $\opH$ is                               &\prope{linear time invariant} & and
     \\(B).& $\rvx(n)$ is                            &\prope{wide-sense stationary} & and
-    \\(C).& $\rvx(n)$, $\rvu(n)$, and $\rvv(n)$ are &\prope{uncorrelated}          & 
+    \\(C).& $\rvx(n)$, $\rvu(n)$, and $\rvv(n)$ are &\prope{uncorrelated}          &
   \end{array}}$
   \\\indentx$\implies
   \brb{\begin{array}{F >{\ds}rc>{\ds}l D}
@@ -829,7 +894,7 @@ Let $\opS$ be the \structe{system} illustrated in \prefp{fig:addnoise} (A).
                            %  & \text{\scs\prope{over-estimated}}
                            %& & \text{\scs\prope{under-estimated}}
       (1).&\estHa(\omega) &=& \FH(\omega) &and
-    \\(2).&\estHb(\omega) &=& \frac{\Swvv(\omega)}{\FH^\ast(\omega)\Swxx(\omega)} 
+    \\(2).&\estHb(\omega) &=& \frac{\Swvv(\omega)}{\FH^\ast(\omega)\Swxx(\omega)}
                               +\FH(\omega)\brs{1 + \frac{\Swuu(\omega)}{\Swxx(\omega)}}
                            &
   \end{array}}$
@@ -860,11 +925,11 @@ Let $\opS$ be the \structe{system} illustrated in \prefp{fig:addnoise} (A).
             {\FH^\ast(\omega)\Swxx(\omega)}
     && \text{by \prefp{cor:Swxy}}
   \\&= \frac{\Swvv(\omega)}
-            {\FH^\ast(\omega)\Swxx(\omega)} 
+            {\FH^\ast(\omega)\Swxx(\omega)}
       +\frac{\FH^\ast(\omega)\FH(\omega)\brs{\Swxx(\omega)+\Swuu(\omega)}}
             {\FH^\ast(\omega)\Swxx(\omega)}
   \\&= \frac{\Swvv(\omega)}
-            {\FH^\ast(\omega)\Swxx(\omega)} 
+            {\FH^\ast(\omega)\Swxx(\omega)}
       +\FH(\omega)\brs{1 + \frac{\Swuu(\omega)}{\Swxx(\omega)}}
 \end{align*}
 \end{proof}
@@ -886,7 +951,7 @@ Let $\opS$ be the \structe{system} illustrated in \prefp{fig:addnoise} (B).
   $\brb{\begin{array}{FMMD}
       (A).& $\opH$ is                               &\prope{linear time invariant} & and
     \\(B).& $\rvx(n)$ is                            &\prope{wide-sense stationary} & and
-    \\(C).& $\rvx(n)$, $\rvu(n)$, and $\rvv(n)$ are &\prope{uncorrelated}          & 
+    \\(C).& $\rvx(n)$, $\rvu(n)$, and $\rvv(n)$ are &\prope{uncorrelated}          &
   \end{array}}$
   \\\indentx$\implies
   \brb{\begin{array}{F >{\ds}rc>{\ds}l DD}
